--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
     // My API key: BLF5APe8EAZcLuzWiIQFOcXJIQ65HFTe
 
     async function getCats(){
-      fetch('https://api.giphy.com/v1/gifs/translate?api_key=BLF5APe8EAZcLuzWiIQFOcXJIQ65HFTe&s=cats', {mode: 'cors'})
-      .then(function(response) {
-        return response.json();
-      })
-      // Get the data
-      .then(function(response) {
-        // To get to the data we need to drill down through the layers of the object until we find what we want
-        img.src = response.data.images.original.url
-      });
+      const response = await fetch('https://api.giphy.com/v1/gifs/translate?api_key=BLF5APe8EAZcLuzWiIQFOcXJIQ65HFTe&s=cats', {mode: 'cors'})
+      response.json().then(function(response){
+        img.src = response.data.images.original.url;
+      })    
     }
     
   </script>
